# VergodtEngine

./: .gitignore  .gitmodules  BuildLibs.bat  BuildLibs.sh  CMakeLists.txt  CodingConventionToUse.cpp  Makefile  README.md  Vergodt Engine.sln  VergodtEngine  VergodtEngine.code-workspace  build.sh
Assets/: FlappyBird.vscene  Node.lua  Script.lua  Script2.lua  Sprite.lua  VergodtEngine.ini  VergodtEngine.lua  VergodtEngine.nut  test.json  test.nut  test.verscript  test.vscene  test2.verscript  testFORGUI.vscene
Assets/FlappyBird/: FlappyBird.verproj  FlappyBird.vscene  OtherBird.vscene  Pipe.nut  Pipes.nut  Pipes.vscene  Spawner.nut  bird.nut  bird.verscript
Dependencies/Box2D/lib/: box2d-d.lib  box2d.lib
Editor/: CMakeLists.txt  Main.cpp
Editor/ImGui/Include/: imgui_impl_sdl3.cpp
Editor/src/: App.cpp  App.h  FileSystem.cpp  FileSystem.h  Inspector.cpp  Inspector.h  Project.cpp  Project.h  SceneView.cpp  SceneView.h  Scripting.cpp  Scripting.h  Viewport.cpp  Viewport.h  main.cpp
GUI_OLDSTUFF/: example_sdl2_vulkan.vcxproj  example_sdl2_vulkan.vcxproj.filters  imgui.ini
GUI_OLDSTUFF/Assets/: test.json
GUI_OLDSTUFF/Release/: GUI.exe.recipe  GUI.ipdb  example_sdl2_vulkan.vcxproj.FileListAbsolute.txt
GUI_OLDSTUFF/Release/GUI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GUI.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
GUI_OLDSTUFF/src/: App.cpp  App.h  main.cpp
GUI_OLDSTUFF/src/ImGUI/: imgui.cpp  imgui_internal.h
Pybind Module/: CMakelists.txt  Module.cpp
PybindModule/: CMakeLists.txt  Module.cpp  test.py
Vergodt Engine/: Vergodt Engine.vcxproj  Vergodt Engine.vcxproj.filters
Vergodt Engine/src/: Main.cpp
Vergodt Engine/src/Engine/: Engine.cpp  Engine.h  Scene.cpp  Scene.h
Vergodt Engine/src/Math/: Vector2.cpp  Vector2.h
Vergodt Engine/src/Objects/: BoxCollider.cpp  BoxCollider.h  CircleCollider.cpp  CircleCollider.h  Collider.h  Node.cpp  Node.h  PhysicsBody.cpp  PhysicsBody.h  Sprite.cpp
libs/SDL2/include/SDL2/: SDL_config.h
libs/SDL2/lib/: libSDL2_image-2.0.so.0.600.3
src/: main.cpp
src/Engine/: BaseScene.cpp  BaseScene.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Project.cpp  Project.h  Scene.cpp  Scene.h  Window.cpp  Window.h
src/Engine/Script/: Luascript.hpp
src/Engine/Scripting/Squirrel/: SquirrelBindings.hpp
src/Engine/Scripting/VisualScripting/: ScriptingNodes.cpp  ScriptingNodes.h
src/Engine/VisualScripting/: ScriptingNodes.cpp  ScriptingNodes.h  ScriptingNodes.hpp
src/Math/: Vector2.cpp  Vector2.h
src/Objects/: BoxCollider.cpp  BoxCollider.h  Camera.h  CircleCollider.cpp  CircleCollider.h  Collider.cpp  Collider.h  Node.cpp  Node.h  PhysicsBody.cpp  PhysicsBody.h  PolygonCollider.cpp  PolygonCollider.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h
src/Sandbox/: Scene.cpp  Scene.h
src/Util/: SceneFileFunctions.h  StringFunctions.cpp  StringFunctions.h
src/util/: SceneFileFunctions.hpp
